cxbx website: http://www.caustik.com/xbox/

version: 0.7.9 (??/??/??)
--------------------------------

- DirectSound support! Turok and Stella (Atari 2600 emulator)
  are both able to play sound+music, works great!

- Added auto-pause functionality when window loses focus

- Fixed start/back mapping problem :)

- Fixed a glitch in EmuExe that was outputting some bad Exes
  in situations such as the msdashboard. (thanks sop skrutt!)

- Fixed LineLoop rendering (X-Marbles, Gamepad, etc etc)

- Some speed optimizations for vertex buffer translation

- CreateDevice via proxy thread caused some issues with the
  interplay between directdraw & direct3d. I resolved this new
  issue and things are good again.

- Overlay support now should work with multimonitors

- Absurd amounts of new code, including general code cleanup

version: 0.7.8c (09/02/03)
--------------------------------

- Spontaneous CreateDevice failures fixed (many, at least)

- Exe now able to generate into temporary directory, allowing
  games to be run from a read only device without path issues.

- Finally, Cxbx.dll and Cxbx.exe enforce version synchronization.
  This should at least diagnose about 9 billion people's problems.

- Very minor splash image tweaks

version: 0.7.8b (08/30/03)
--------------------------------

- Fixed debug messages accidentally left in the previous release.

version: 0.7.8 (08/29/03)
--------------------------------

- Halo executes (no graphics yet)

- Overlays simulated on PCs that do not support them in hardware.

- YUY2 overlay capabilities detection improved significantly

- Fixes to mesh rendering (thanks kingofc!). The "XRay" XDK demo is
  extremely impressive now (and runs very efficiently), as well as
  the Gamepad/Rumble demos.

- Z: drive simulation repaired

version: 0.7.7b (07/16/03)
--------------------------------

- Fixed lost compatibility with X-Marbles, etc

version: 0.7.7 (07/15/03)
--------------------------------
