@@ -55,10 +55,10 @@ typedef signed short   sint16;
 typedef signed long    sint32;
 
 // define this to trace intercepted function calls
-//#define _DEBUG_TRACE
+#define _DEBUG_TRACE
 
 // define this to trace warnings
-//#define _DEBUG_WARNINGS
+#define _DEBUG_WARNINGS
 
 // version information
 #ifndef _DEBUG_TRACE
